--- a/index.html
+++ b/index.html
@@ -58,24 +58,140 @@
                                 <div class="divider">:</div>
                                 <div class="value">English, Russian, Ukrainian</div>
                             </div>
+
                         <h3>Skills</h3>
                             <div class="data communication">
-                                <div class="title">Languages</div>
+                                <div class="title">Communication</div>
                                 <div class="progress">
-                                    <div class="progress-bar" role="progressbar" aria-valuenow="70"
-                                         aria-valuemin="0" aria-valuemax="100" style="width:70%">
-                                        <span class="sr-only">70% Complete</span>
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                        <span class="sr-only">90% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data creativity">
+                                <div class="title">Creativity</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                                        <span class="sr-only">85% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data teamwork">
+                                <div class="title">Teamwork</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                        <span class="sr-only">80% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data organizational">
+                                <div class="title">Organizational</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="75"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                                        <span class="sr-only">75% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data leadership">
+                                <div class="title">Leadership</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data teamplayer">
+                                <div class="title">Teamplayer</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                        <span class="sr-only">60% Complete</span>
                                     </div>
                                 </div>
                             </div>
 
+                            <h3>Software</h3>
+                            <div class="data photoshop upper">
+                                <div class="title">Photoshop</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="90"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:90%">
+                                        <span class="sr-only">90% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data illustrator upper">
+                                <div class="title">Illustrator</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="85"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:85%">
+                                        <span class="sr-only">85% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data indesign upper">
+                                <div class="title">Indesign</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="80"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:80%">
+                                        <span class="sr-only">80% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data ms_office upper">
+                                <div class="title">MS Office</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="75"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:75%">
+                                        <span class="sr-only">75% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data html5 upper">
+                                <div class="title">HTML 5</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="data css upper">
+                                <div class="title">CSS</div>
+                                <div class="progress">
+                                    <div class="progress-bar" role="progressbar" aria-valuenow="60"
+                                         aria-valuemin="0" aria-valuemax="100" style="width:60%">
+                                        <span class="sr-only">60% Complete</span>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <h3>Reference</h3>
+                            <div class="reference">
+                                <h4>Johns Michael</h4>
+                                <p class="bold">Director, Matrix media limited</p>
+                                <p><b>Phone : </b>+555 123 5566</p>
+                                <p><b>Email : </b>Johns_Michael@gmail.com</p>
+                            </div>
+                            <br>
+                            <div class="reference">
+                                <h4>Johns Michael</h4>
+                                <p class="bold">Web developer, Design Mate LTD</p>
+                                <p><b>Phone : </b>+123 556 4455</p>
+                                <p><b>Email : </b>Johns_Michael@gmail.com</p>
+                            </div>
                     </div>
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-7 col-lg-7 right_bar">
 
                 <h1 class="user_name">Jason Martin</h1>
-                <h4>UX / UI designer</h4>
+                <h2 class="position">UX / UI designer</h2>
                 <p class="about">My name is Fedor Matsko lorem empus id fringilla molestie ornare diam
                     in olestie ipsum etium rosn ollicitudin est, porttitor amet hitmassa Done cporttitor
                     dolor shit dolor kiren lorem nisl molestie pretium etfring. is the shitp lorem ipcum
@@ -86,7 +202,128 @@
                 <div class="row experience">
                     <h3 class="container">Experience</h3>
                 </div>
-                
+                <br>
+
+                <div class="history">
+                    <div class="function">
+                        <p class="bold">Lead Web Designer</p>
+                        <p>2015 - 2017</p>
+                    </div>
+                    <div class="place">
+                        <p class="big">Soft Design Studios</p>
+                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium feliscon lore
+                            ipsum dolor tfringilla. lorem lorem ipsum. ollcitudin est dolor time. </p>
+                    </div>
+                </div>
+                <br>
+                <div class="history">
+                    <div class="function">
+                        <p class="bold">Senior Web Designer</p>
+                        <p>2013 - 2015</p>
+                    </div>
+                    <div class="place">
+                        <p class="big">Web Tech ltd</p>
+                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium feliscon lore
+                            ipsum dolor tfringilla. lorem lorem ipsum. ollcitudin est dolor time. </p>
+                    </div>
+                </div>
+                <br>
+                <div class="history">
+                    <div class="function">
+                        <p class="bold">Lead Web Designer</p>
+                        <p>2010 - 2013</p>
+                    </div>
+                    <div class="place">
+                        <p class="big">Dev Creative Solution</p>
+                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium feliscon lore
+                            ipsum dolor tfringilla. lorem lorem ipsum. ollcitudin est dolor time. </p>
+                    </div>
+                </div>
+                <br>
+                <div class="history">
+                    <div class="function">
+                        <p class="bold">Senior Web Designer</p>
+                        <p>2008 - 2010</p>
+                    </div>
+                    <div class="place">
+                        <p class="big">Dev Creative Solution</p>
+                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium feliscon lore
+                            ipsum dolor tfringilla. lorem lorem ipsum. ollcitudin est dolor time. </p>
+                    </div>
+                </div>
+
+                <div class="row experience">
+                    <h3 class="container">Education</h3>
+                </div>
+                <br>
+
+                <div class="history">
+                    <div class="university">
+                        <p class="bold">Name of university</p>
+                        <p>2010 - 2013</p>
+                    </div>
+                    <div class="stage">
+                        <p class="big">Certificate of web trainig</p>
+                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium feliscon lore
+                            ipsum dolor tfringilla. lorem lorem ipsum. ollcitudin est dolor time. </p>
+                    </div>
+                </div>
+                <br>
+                <div class="history">
+                    <div class="university">
+                        <p class="bold">Name of university</p>
+                        <p>2007 - 2009</p>
+                    </div>
+                    <div class="stage">
+                        <p class="big">Bachelor of art director</p>
+                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium feliscon lore
+                            ipsum dolor tfringilla. lorem lorem ipsum. ollcitudin est dolor time. </p>
+                    </div>
+                </div>
+                <br>
+                <div class="history">
+                    <div class="university">
+                        <p class="bold">Name of university</p>
+                        <p>2007 - 2009</p>
+                    </div>
+                    <div class="stage">
+                        <p class="big">Higher secondary examination</p>
+                        <p>Porttitor amet massa Done cporttitor dolor et nisl molestie ium feliscon lore
+                            ipsum dolor tfringilla. lorem lorem ipsum. ollcitudin est dolor time. </p>
+                    </div>
+                </div>
+
+                <div class="row experience">
+                    <h3 class="container">Hobbies</h3>
+                </div>
+                <br>
+
+                <div class="hobbies">
+                    <div class="music">
+                        <i class="fa fa-music" aria-hidden="true"></i>
+                        <p class="fat">Music</p>
+                    </div>
+
+                    <div class="traveling">
+                        <i class="fa fa-ship" aria-hidden="true"></i>
+                        <p class="fat">Traveling</p>
+                    </div>
+
+                    <div class="photo">
+                        <i class="fa fa-camera" aria-hidden="true"></i>
+                        <p class="fat">Photo</p>
+                    </div>
+
+                    <div class="reading">
+                        <i class="fa fa-book" aria-hidden="true"></i>
+                        <p class="fat">Reading</p>
+                    </div>
+
+                    <div class="football">
+                        <i class="fa fa-futbol-o" aria-hidden="true"></i>
+                        <p class="fat">Football</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
